--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
   <body>
     <main>
       <div class="button_language" style="padding-right: 20px">
-        <button id="languageToggle">En / Es</button>
+        <button id="languageToggle">
+          <img
+            id="languageImage"
+            src="assets/images/Flag_of_the_United_States.png"
+            alt="language image"
+          />
+          En/Es
+        </button>
         <script src="js/change_language.js"></script>
       </div>
 
