Se agrego nuevo diseño al boton de cambio de idioma en todas las paginas

--- a/IFM.html
+++ b/IFM.html
@@ -25,7 +25,14 @@
           <a href="#contact" data-en="Contact" data-es="Contacto">Contacto</a>
         </div>
         <div class="button_language" style="padding-right: 20px">
-          <button id="languageToggle">English</button>
+          <button id="languageToggle">
+            <img
+              id="languageImage"
+              src="assets/images/Flag_of_the_United_States.png"
+              alt="language image"
+            />
+            En/Es
+          </button>
           <script src="js/change_language.js" defer></script>
         </div>
       </nav>
@@ -152,7 +159,7 @@
             ></textarea
             ><br /><br />
 
-            <input type="submit" value="Enviar" id="submit"/>
+            <input type="submit" value="Enviar" id="submit" />
           </form>
         </div>
       </article>
