--- a/innov8.html
+++ b/innov8.html
@@ -22,7 +22,14 @@
           <a href="#contact" data-en="Contact" data-es="Contacto">Contacto</a>
         </div>
         <div class="button_language" style="padding-right: 20px">
-          <button id="languageToggle">English</button>
+          <button id="languageToggle">
+            <img
+              id="languageImage"
+              src="assets/images/Flag_of_the_United_States.png"
+              alt="language image"
+            />
+            En/Es
+          </button>
           <script src="js/change_language.js" defer></script>
         </div>
       </nav>
