Se agrego algo del diseño nuevo y planteado a Innovative Group (Index)

--- a/index.html
+++ b/index.html
@@ -37,16 +37,48 @@
       </div>
 
       <div class="image-contain" id="image-contain-1">
-        <img src="assets/images/instagram1.jpeg" alt="Imagen de IFM 1" />
-        <!-- <img src="assets/images/instagram2.jpg" alt="Imagen de IFM 2" /> -->
+        <!-- <img src="assets/images/instagram1.jpeg" alt="Imagen de IFM 1" /> -->
+         <video src="assets/WeTransfer/Images/1. Pagina Inicial/1. Édier.mp4" alt="Video de IFM" muted></video>
       </div>
       <div class="image-contain" id="image-contain-2">
-        <img src="assets/images/inicio1.jpg" alt="Imagen de C.D. Olimpia 1" />
-        <!-- <img src="assets/images/inicio2.jpg" alt="Imagen de C.D. Olimpia 2" /> -->
+        <!-- <img src="assets/images/inicio1.jpg" alt="Imagen de IFM 1" /> -->
+         <video src="assets/WeTransfer/Images/1. Pagina Inicial/2. Rai.mp4" alt="Video de IFM" muted></video>
       </div>
       <div class="image-contain" id="image-contain-3">
-        <img src="assets/images/inicio3.png" alt="Imagen de Innov8 1" />
-        <!-- <img src="assets/images/inicio4.jpg" alt="Imagen de Innov8 2" /> -->
+        <img
+          src="assets/WeTransfer/Images/1. Pagina Inicial/3. Innovative_Inicial.png"
+          alt="Imagen de IFM 1"
+        />
+      </div>
+      <div class="image-contain" id="image-contain-4">
+        <img
+          src="assets/WeTransfer/Images/1. Pagina Inicial/4. Innovative_Inicial.jpg"
+          alt="Imagen de IFM 1"
+        />
+      </div>
+      <div class="image-contain" id="image-contain-5">
+        <img
+          src="assets/WeTransfer/Images/1. Pagina Inicial/5. Innovative_Inicial.jpg"
+          alt="Imagen de Innov8 1"
+        />
+      </div>
+      <div class="image-contain" id="image-contain-6">
+        <img
+          src="assets/WeTransfer/Images/1. Pagina Inicial/6. Innovative_Inicial.jpg"
+          alt="Imagen de Innov8 1"
+        />
+      </div>
+      <div class="image-contain" id="image-contain-7">
+        <img
+          src="assets/WeTransfer/Images/1. Pagina Inicial/7. Innovative_Inicial.jpg"
+          alt="Imagen de C.D. Olimpia 1"
+        />
+      </div>
+      <div class="image-contain" id="image-contain-8">
+        <img
+          src="assets/WeTransfer/Images/1. Pagina Inicial/8. Innovative_Inicial.JPG"
+          alt="Imagen de C.D. Olimpia 1"
+        />
       </div>
 
       <button id="position-left" data-en="INTRODUCTION" data-es="INTRODUCCION">
