Se agregaron los logos modificados y ademas de esto algunas imagenes

--- a/IFM.html
+++ b/IFM.html
@@ -45,8 +45,13 @@
           <video id="video2" src="assets/videos/gol2.mp4" muted></video>
         </div>
         <div class="contain-img">
-          <img
+          <!-- <img
             src="assets/icons/ifmlastlogorb.png"
+            alt="IFM Logo Principal"
+            id="logo"
+          /> -->
+          <img
+            src="assets/LogosInnovative/INNOVATIVE FOOTBALL-03.png"
             alt="IFM Logo Principal"
             id="logo"
           />
@@ -231,10 +236,10 @@
             ><img src="assets/icons/instagram2.png" alt="Instagram IFM"
           /></a>
           <a href="https://www.facebook.com"
-            ><img src="assets/icons/linkedin2.png" alt="Facebook IFM"
+            ><img src="assets/icons/facebook.png" alt="Facebook IFM"
           /></a>
-          <a href="https://www.whatsapp.com"
-            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp IFM"
+          <a href="https://www.linkedin.com"
+            ><img src="assets/icons/linkedin2.png" alt="LinkedIn IFM"
           /></a>
         </div>
       </footer>
