--- a/innov8.html
+++ b/innov8.html
@@ -12,7 +12,8 @@
     <div class="contain-father">
       <nav id="navbar">
         <div class="logo">
-          <img src="assets/icons/innov8logorb.png" alt="Logo Innov8" />
+          <!-- <img src="assets/icons/innov8logorb.png" alt="Logo Innov8" /> -->
+          <img src="assets/LogosInnovative/INNOV8-01.png" alt="Logo Innov8" />
         </div>
         <div class="botones">
           <a href="index.html" data-en="Home" data-es="Inicio">Inicio</a>
@@ -37,12 +38,17 @@
       <header id="volver">
         <div class="static-image">
           <img
-            src="assets/images/marketing1.jpg"
+            src="assets/WeTransfer/Images/3. Innov8/marketing.jpg"
             alt="Marketing Imagen Innov8"
           />
         </div>
-        <img
+        <!-- <img
           src="assets/icons/innov8logorb.png"
+          alt="Logo Principal de Innov8"
+          id="logo"
+        /> -->
+        <img
+          src="assets/LogosInnovative/INNOV8-01.png"
           alt="Logo Principal de Innov8"
           id="logo"
         />
@@ -52,7 +58,7 @@
       <main>
         <div id="contain-1">
           <img
-            src="assets/images/marketing2.jpg"
+            src="assets/WeTransfer/Images/3. Innov8/marketing2.jpg"
             alt="Marketing Imagen Innov8 2"
             id="fondo"
           />
@@ -244,14 +250,14 @@
           &copy; Innovative Football Management. All rights reserved.
         </div>
         <div id="redes">
-          <a href="https://www.instagram.com"
-            ><img src="assets/icons/instagram2.png" alt="Instagram Innov8"
+          <a href="https://www.instagram.com/innovativefootballmgmt/"
+            ><img src="assets/icons/instagram2.png" alt="Instagram IFM"
           /></a>
           <a href="https://www.facebook.com"
-            ><img src="assets/icons/linkedin2.png" alt="Facebook Innov8"
+            ><img src="assets/icons/facebook.png" alt="Facebook IFM"
           /></a>
-          <a href="https://www.whatsapp.com"
-            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp Innov8"
+          <a href="https://www.linkedin.com"
+            ><img src="assets/icons/linkedin2.png" alt="LinkedIn IFM"
           /></a>
         </div>
       </footer>
