--- a/olimpia.html
+++ b/olimpia.html
@@ -12,7 +12,11 @@
     <div class="contain-father">
       <nav id="navbar">
         <div class="logo">
-          <img src="assets/icons/olimpialogorb.png" alt="Logo C.D. Olimpia" />
+          <!-- <img src="assets/icons/olimpialogorb.png" alt="Logo C.D. Olimpia" /> -->
+          <img
+            src="assets/LogosInnovative/CD OLIMPIA-02.png"
+            alt="Logo C.D. Olimpia"
+          />
         </div>
         <div class="botones">
           <a href="index.html" data-en="Home" data-es="Inicio">Inicio</a>
@@ -37,12 +41,17 @@
       <header id="volver">
         <div class="static-image">
           <img
-            src="assets/images/workout1.jpg"
+            src="assets/WeTransfer/Images/4. Olimpia FC/workout.jpg"
             alt="Entrenamiento Imagen C.D. Olimpia 1"
           />
         </div>
-        <img
+        <!-- <img
           src="assets/icons/olimpialogorb.png"
+          alt="Logo Principal C.D. Olimpia"
+          id="logo"
+        /> -->
+        <img
+          src="assets/LogosInnovative/CD OLIMPIA-02.png"
           alt="Logo Principal C.D. Olimpia"
           id="logo"
         />
@@ -240,16 +249,14 @@
           &copy; Innovative Football Management. All rights reserved.
         </div>
         <div id="redes">
-          <a href="https://www.instagram.com"
-            ><img
-              src="assets/icons/instagram2.png"
-              alt="Instagram C.D. Olimpia"
+          <a href="https://www.instagram.com/innovativefootballmgmt/"
+            ><img src="assets/icons/instagram2.png" alt="Instagram IFM"
           /></a>
           <a href="https://www.facebook.com"
-            ><img src="assets/icons/linkedin2.png" alt="Facebook C.D. Olimpia"
+            ><img src="assets/icons/facebook.png" alt="Facebook IFM"
           /></a>
-          <a href="https://www.whatsapp.com"
-            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp C.D. Olimpia"
+          <a href="https://www.linkedin.com"
+            ><img src="assets/icons/linkedin2.png" alt="LinkedIn IFM"
           /></a>
         </div>
       </footer>
