--- a/IFM.html
+++ b/IFM.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/IFM/responsive.css" />
-    <link rel="icon" href="assets/icons/ifmfavicon.ico" />
+    <link rel="icon" href="assets/icons/favicon.png" />
     <script src="js/videos.js" defer></script>
     <script src="js/time-video.js" defer></script>
     <script src="js/scroll.js" defer></script>
@@ -14,8 +14,8 @@
     <div id="contain-father">
       <nav id="navbar">
         <div class="logo">
-          <img src="assets/icons/escudo.png" alt="Escudo IFM Logo" />
-          <img src="assets/icons/IFM_Nombre2.png" alt="IFM Logo" />
+          <img src="assets/icons/escudo2.png" alt="Escudo IFM Logo" />
+          <img src="assets/icons/IFM_Nombre3.png" alt="IFM Logo" />
         </div>
         <div class="botones">
           <a href="index.html" data-en="Home" data-es="Inicio">Inicio</a>
@@ -137,7 +137,24 @@
       </main>
 
       <article>
-        <div id="contain1"></div>
+        <div id="contain1">
+          <div class="content-contact">
+            <h1 data-en="CONTACT" data-es="CONTACTO">CONTACTO</h1>
+            <br />
+            <p>
+              <img src="assets/svg/mail.svg" alt="Email IFM" />
+              info@innovativegroup.com
+            </p>
+            <br />
+            <p>
+              <img
+                src="assets/svg/contact_phone.svg"
+                alt="Contact Number Phone IFM"
+              />
+              +1 23456789
+            </p>
+          </div>
+        </div>
         <div id="contain2">
           <form action="/sumbit_form" method="post">
             <label for="name">Nombre:</label><br />
@@ -170,22 +187,6 @@
       </article>
 
       <div class="section">
-        <div class="content-contact">
-          <h1 data-en="CONTACT" data-es="CONTACTO">CONTACTO</h1>
-          <br />
-          <p>
-            <img src="assets/svg/mail.svg" alt="Email IFM" />
-            info@innovativegroup.com
-          </p>
-          <br />
-          <p>
-            <img
-              src="assets/svg/contact_phone.svg"
-              alt="Contact Number Phone IFM"
-            />
-            +1 23456789
-          </p>
-        </div>
         <div class="content-ubi">
           <div class="title">
             <h1 data-en="LOCATIONS" data-es="UBICACIONES">UBICACIONES</h1>
