Se termino la pagina de IFM

--- a/IFM.html
+++ b/IFM.html
@@ -69,7 +69,11 @@
       <section></section>
       <main>
         <div id="contain-1">
-          <img src="assets/images/balon2.jpg" alt="IFM campo" id="fondo" />
+          <img
+            src="assets/WeTransfer/Images/2. IFM/PHOTO-2024-03-26-18-35-44 8.jpg"
+            alt="IFM campo"
+            id="fondo"
+          />
           <div class="contain-text">
             <h1>Innovative Football Management (IFM)</h1>
             <br />
